	  So you can log debug output to a file or you can put the console on /dev/ttyS0
	  and the debug output on /dev/ttyS1.
	* arch/arm/src/lpc43xxl/lpc43_spifi.c: Correct an addressing error in the LPC43
	  SPIFI MTD driver
	* drivers/syslog/syslog.c and fs/fs_syslog.c:  Moved the generic syslog logic
	  from drivers/syslog to fs/ where is belongs.  Especially after realizing that
	  the syslog logic is going to have to some internal FS operations in order
	  to realize a totally thread-independent SYSLOG interface.
	* arch/arm/src/stm32/stm32*_rcc.c and .h:  If CONFIG_PM is defined, add a
	  function called stm32_clockenable() that can be used by PM logic to re-start
	  the PLL after re-awakening from deep sleep modes.
	* fs/fs_foreachinode.c and fs/fs_foreachmountpoint.c:  All logic to traverse
	  inodes and mountpoints in the NuttX pseudo-file system.
	* fs/fat/fs_fat32.c: Max. filename length reported by statfs() was wrong
	  if FAT long file names were enabled.
	* lib/stdio/lib_libvsprintf.c:  Fieldwidth and justification were not
	  supported for the %s format.  As a result, %s, %12s, and %-12s all
	  produced the same output.
	* lib/stdio/lib_libdtoa.c:  Fix several issues with presenting floating
	  point numbers (conversions are fine, but presentation was bad).  This
	  is a critical bug fix if you use printf or sprintf to deal with floating
	  point numbers.
	* lib/stdio/lib_libdtoa.c and lib_libvsprintf.c:  Correct some floating
	  point options.
	* arch/arm/lpc43xx/lpc32_usb0dev.c:  Add framework for development of
	  an USB0, device-side driver for the LPC43XX.  The initial check-in,
	  however, is simply for the LPC31xx driver with name changes.  The
	  LPC31xx has the same USB IP, but will require some additional initialization
	  (and lots of testing) before it can be used with the LPC43xx.
	* nuttx/Documentation/NuttShell.html:  Added a section covering ways to
	  customize the behavior or NSH.
