@@ -432,8 +432,8 @@ HY-Mini specific Configuration Options
 	CONFIG_STM32_SPI1_REMAP
 	CONFIG_STM32_SPI3_REMAP
 	CONFIG_STM32_I2C1_REMAP
-	CONFIG_STM32_CAN1_FULL_REMAP
-	CONFIG_STM32_CAN1_PARTIAL_REMAP
+	CONFIG_STM32_CAN1_REMAP1
+	CONFIG_STM32_CAN1_REMAP2
 	CONFIG_STM32_CAN2_REMAP
 
   STM32F103V specific device driver settings
